--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
       <file name="Base.php" role="php" />
       <file name="Exception.php" role="php" />
       <file name="Interface.php" role="php" />
+      <file name="Json.php" role="php" />
      </dir> <!-- /lib/Horde/View -->
      <file name="View.php" role="php" />
     </dir> <!-- /lib/Horde -->
@@ -112,6 +113,7 @@ http://pear.php.net/dtd/package-2.0.xsd">
    <install name="lib/Horde/View/Base.php" as="Horde/View/Base.php" />
    <install name="lib/Horde/View/Exception.php" as="Horde/View/Exception.php" />
    <install name="lib/Horde/View/Interface.php" as="Horde/View/Interface.php" />
+   <install name="lib/Horde/View/Json.php" as="Horde/View/Json.php" />
    <install name="lib/Horde/View.php" as="Horde/View.php" />
   </filelist>
  </phprelease>
