--- a/package.xml
+++ b/package.xml
@@ -17,8 +17,8 @@
   <email>mike@maintainable.com</email>
   <active>yes</active>
  </lead>
- <date>2011-03-06</date>
- <time>23:02:02</time>
+ <date>2011-03-08</date>
+ <time>23:52:39</time>
  <version>
   <release>1.0.0alpha1</release>
   <api>1.0.0</api>
@@ -219,10 +219,10 @@
     <api>1.0.0</api>
    </version>
    <stability>
-    <release>beta</release>
-    <api>beta</api>
+    <release>alpha</release>
+    <api>alpha</api>
    </stability>
-   <date>2011-03-06</date>
+   <date>2011-03-08</date>
    <license uri="http://www.gnu.org/copyleft/lesser.html">LGPL</license>
    <notes>
 * First alpha release for Horde 4.
