Development mode for Horde_View-1.0.2

--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
   <active>yes</active>
  </lead>
  <date>2011-11-22</date>
- <time>21:30:52</time>
+ <time>21:31:41</time>
  <version>
-  <release>1.0.1</release>
+  <release>1.0.2</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -29,7 +29,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Make unit tests Windows compatible.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -337,6 +337,19 @@
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [jan] Make unit tests Windows compatible.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.0.2</release>
+    <api>1.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2011-11-22</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
