--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
   <active>yes</active>
  </lead>
  <date>2012-07-06</date>
- <time>00:06:50</time>
+ <time>00:07:05</time>
  <version>
-  <release>2.0.0alpha1</release>
+  <release>2.0.0beta1</release>
   <api>1.1.0</api>
  </version>
  <stability>
@@ -29,8 +29,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* First alpha release for Horde 5.
-* [mms] Added Horde_View_Helper_FormTag#optionTag().
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -352,6 +351,19 @@
    <notes>
 * First alpha release for Horde 5.
 * [mms] Added Horde_View_Helper_FormTag#optionTag().
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.0beta1</release>
+    <api>1.1.0</api></version>
+   <stability>
+    <release>beta</release>
+    <api>stable</api></stability>
+   <date>2012-07-06</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
