Add/update Horde_Test dependencies.

--- a/package.xml
+++ b/package.xml
@@ -17,8 +17,8 @@
   <email>mike@maintainable.com</email>
   <active>yes</active>
  </lead>
- <date>2012-10-30</date>
- <time>20:02:30</time>
+ <date>2012-11-19</date>
+ <time>14:08:28</time>
  <version>
   <release>2.0.1</release>
   <api>1.1.0</api>
@@ -120,6 +120,7 @@
       </dir> <!-- /test/Horde/View/Helper -->
       <file name="AllTests.php" role="test" />
       <file name="BaseTest.php" role="test" />
+      <file name="bootstrap.php" role="test" />
       <file name="InterfaceTest.php" role="test" />
       <file name="phpunit.xml" role="test" />
      </dir> <!-- /test/Horde/View -->
@@ -172,6 +173,13 @@
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
+   <package>
+    <name>Horde_Test</name>
+    <channel>pear.horde.org</channel>
+    <min>2.1.0</min>
+    <max>3.0.0alpha1</max>
+    <exclude>3.0.0alpha1</exclude>
+   </package>
    <extension>
     <name>json</name>
    </extension>
@@ -210,6 +218,7 @@
    <install as="Horde/View/Helper/Text/Cycle.php" name="lib/Horde/View/Helper/Text/Cycle.php" />
    <install as="Horde/View/AllTests.php" name="test/Horde/View/AllTests.php" />
    <install as="Horde/View/BaseTest.php" name="test/Horde/View/BaseTest.php" />
+   <install as="Horde/View/bootstrap.php" name="test/Horde/View/bootstrap.php" />
    <install as="Horde/View/InterfaceTest.php" name="test/Horde/View/InterfaceTest.php" />
    <install as="Horde/View/phpunit.xml" name="test/Horde/View/phpunit.xml" />
    <install as="Horde/View/fixtures/testEscape.html.php" name="test/Horde/View/fixtures/testEscape.html.php" />
@@ -386,7 +395,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2012-10-30</date>
+   <date>2012-11-19</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * 
