--- a/package.xml
+++ b/package.xml
@@ -29,7 +29,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Fix generating form tags.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -411,7 +411,7 @@
    <date>2012-11-19</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Fix generating form tags.
    </notes>
   </release>
  </changelog>
