[jan] Allow collections with arbitrary keys when rendering partials.

--- a/package.xml
+++ b/package.xml
@@ -29,7 +29,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Allow collections with arbitrary keys when rendering partials.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -424,7 +424,7 @@
    <date>2013-02-11</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Allow collections with arbitrary keys when rendering partials.
    </notes>
   </release>
  </changelog>
