[jan] Change Horde_View_Helper_Date#distanceOfTimeInWords() to not round up the distance.

--- a/package.xml
+++ b/package.xml
@@ -29,6 +29,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
+* [jan] Change Horde_View_Helper_Date#distanceOfTimeInWords() to not round up the distance.
 * [jan] Make Horde_View_Helper_Text#truncate() and truncateMiddle() multibyte-safe (Bug #13163).
  </notes>
  <contents>
@@ -439,6 +440,7 @@
    <date>2013-08-22</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
+* [jan] Change Horde_View_Helper_Date#distanceOfTimeInWords() to not round up the distance.
 * [jan] Make Horde_View_Helper_Text#truncate() and truncateMiddle() multibyte-safe (Bug #13163).
    </notes>
   </release>
