--- a/package.xml
+++ b/package.xml
@@ -28,7 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Fix issues with certain locales like Turkish.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -452,7 +452,7 @@
    <date>2014-05-14</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Fix issues with certain locales like Turkish.
    </notes>
   </release>
  </changelog>
