--- a/composer.json
+++ b/composer.json
@@ -16,24 +16,24 @@
             "role": "lead"
         }
     ],
-    "version": "2.0.6",
+    "version": "2.0.7",
     "time": "2016-02-02",
     "repositories": [
         {
             "type": "pear",
-            "url": "https://pear.horde.org"
+            "url": "http://pear.horde.org"
         }
     ],
     "require": {
-        "php": ">=5.3.0,<=8.0.0alpha1",
-        "pear-pear.horde.org/Horde_Exception": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Support": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Util": ">=2.0.0@stable,<=3.0.0alpha1@stable"
+        "php": "^5.3,<8",
+        "pear-pear.horde.org/Horde_Exception": "^2@stable",
+        "pear-pear.horde.org/Horde_Support": "^2@stable",
+        "pear-pear.horde.org/Horde_Util": "^2@stable"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Controller": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Routes": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Test": ">=2.1.0@stable,<=3.0.0alpha1@stable",
+        "pear-pear.horde.org/Horde_Controller": "^2@stable",
+        "pear-pear.horde.org/Horde_Routes": "^2@stable",
+        "pear-pear.horde.org/Horde_Test": "^2.1@stable",
         "ext-json": "*"
     }
 }
