Update .horde.yml with extended information.

--- a/.horde.yml
+++ b/.horde.yml
@@ -5,3 +5,40 @@ full: View pattern library
 description: A simple View pattern implementation.
 list: dev
 type: library
+homepage: https://www.horde.org/libraries/Horde_View
+authors:
+  -
+    name: Chuck Hagenbuch
+    user: chuck
+    email: chuck@horde.org
+    active: true
+    role: lead
+  -
+    name: Mike Naberezny
+    user: mnaberez
+    email: mike@maintainable.com
+    active: true
+    role: lead
+version:
+  release: 2.0.7
+  api: 1.1.0
+state:
+  release: stable
+  api: stable
+license:
+  identifier: LGPL-2.1
+  uri: http://www.horde.org/licenses/lgpl21
+dependencies:
+  required:
+    php: ^5.3 || ^7
+    pear:
+      pear.horde.org/Horde_Exception: ^2
+      pear.horde.org/Horde_Support: ^2
+      pear.horde.org/Horde_Util: ^2
+  optional:
+    pear:
+      pear.horde.org/Horde_Controller: ^2
+      pear.horde.org/Horde_Routes: ^2
+      pear.horde.org/Horde_Test: ^2.1
+    ext:
+      json: '*'
