--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-view",
+    "name": "horde/view",
     "description": "Horde View API",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -26,14 +26,14 @@
     ],
     "require": {
         "php": "^5.3 || ^7",
-        "pear-pear.horde.org/Horde_Exception": "^2@stable",
-        "pear-pear.horde.org/Horde_Support": "^2@stable",
-        "pear-pear.horde.org/Horde_Util": "^2@stable"
+        "pear-pear.horde.org/Horde_Exception": "^2",
+        "pear-pear.horde.org/Horde_Support": "^2",
+        "pear-pear.horde.org/Horde_Util": "^2"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Controller": "^2@stable",
-        "pear-pear.horde.org/Horde_Routes": "^2@stable",
-        "pear-pear.horde.org/Horde_Test": "^2.1@stable",
+        "pear-pear.horde.org/Horde_Controller": "^2",
+        "pear-pear.horde.org/Horde_Routes": "^2",
+        "pear-pear.horde.org/Horde_Test": "^2.1",
         "ext-json": "*"
     },
     "replace": {
