Update package definitions.

--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
  <name>Horde_View</name>
  <channel>pear.horde.org</channel>
  <extends>View</extends>
- <summary>Horde View API</summary>
+ <summary>View pattern library</summary>
  <description>A simple View pattern implementation.</description>
  <lead>
   <name>Chuck Hagenbuch</name>
@@ -17,7 +17,7 @@
   <email>mike@maintainable.com</email>
   <active>yes</active>
  </lead>
- <date>2017-10-27</date>
+ <date>2017-11-11</date>
  <version>
   <release>2.0.7</release>
   <api>1.1.0</api>
@@ -475,7 +475,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2017-10-27</date>
+   <date>2017-11-11</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * 
