Update package definitions.

--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,23 @@
 {
     "name": "horde/view",
-    "description": "Horde View API",
+    "description": "View pattern library",
     "type": "library",
-    "homepage": "https://pear.horde.org",
+    "homepage": "https://www.horde.org/libraries/Horde_View",
     "license": "LGPL-2.1",
     "authors": [
-        {
-            "name": "Chuck Hagenbuch",
-            "email": "chuck@horde.org",
-            "role": "lead"
-        },
         {
             "name": "Mike Naberezny",
             "email": "mike@maintainable.com",
             "role": "lead"
+        },
+        {
+            "name": "Chuck Hagenbuch",
+            "email": "chuck@horde.org",
+            "role": "lead"
         }
     ],
     "version": "2.0.7",
-    "time": "2016-02-02",
+    "time": "2017-11-14",
     "repositories": [
         {
             "type": "pear",
