--- a/package.xml
+++ b/package.xml
@@ -3,21 +3,21 @@
  <name>Horde_View</name>
  <channel>pear.horde.org</channel>
  <extends>View</extends>
- <summary>Horde View API</summary>
+ <summary>View pattern library</summary>
  <description>A simple View pattern implementation.</description>
- <lead>
-  <name>Chuck Hagenbuch</name>
-  <user>chuck</user>
-  <email>chuck@horde.org</email>
-  <active>yes</active>
- </lead>
  <lead>
   <name>Mike Naberezny</name>
   <user>mnaberez</user>
   <email>mike@maintainable.com</email>
   <active>yes</active>
  </lead>
- <date>2017-10-30</date>
+ <lead>
+  <name>Chuck Hagenbuch</name>
+  <user>chuck</user>
+  <email>chuck@horde.org</email>
+  <active>no</active>
+ </lead>
+ <date>2017-11-14</date>
  <version>
   <release>2.0.7</release>
   <api>1.1.0</api>
@@ -477,7 +477,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2017-10-30</date>
+   <date>2017-11-14</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * 
